tests/fail/semantics/ambiguous_inference/main.kira
@Main
function entry() {
    let value;
    return;
}
